with new page-container size for easier reading articles / carousel next and prev indicators were not fitting properly on screen, resolved this issue

--- a/front-end/src/pages/ChooseImgPage/ChooseImgPage.css
+++ b/front-end/src/pages/ChooseImgPage/ChooseImgPage.css
@@ -1,15 +1,20 @@
-.choose-article img{
-    max-width: 900px;
-    margin: 0 auto 40px auto;
-}
-
-.choose-article.page-container{
-    width: 90vw;
+.carousel{
+    max-width: 60vw;
+    margin-bottom: 20px;
 }
 
 .choose-article h1{
     font-size: 5rem;
 }
+
+.carousel-control-prev {
+  left: -15%; 
+}
+
+.carousel-control-next {
+  right: -15%; 
+}
+
 
 .carousel-control-prev-icon{
     background-image: url("/prev.png");
